--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,24 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+{{pokemon-profile
+      image="http://cdn.bulbagarden.net/upload/thumb/2/21/001Bulbasaur.png/500px-001Bulbasaur.png"
+      name="Bulbasaur"
+      type="Grass"
+      number="001"
+      profile="Bulbasaur (Japanese: フシギダネ Fushigidane) is a dual-type Grass/Poison Pokémon. It evolves into Ivysaur starting at level 16, which evolves into Venusaur starting at level 32."
+}}
+{{pokemon-profile
+      image="http://cdn.bulbagarden.net/upload/thumb/7/73/004Charmander.png/500px-004Charmander.png"
+      name="Charmander"
+      type="Fire"
+      number="004"
+      profile="Charmander (Japanese: ヒトカゲ Hitokage) is a Fire-type Pokémon. It evolves into Charmeleon starting at level 16, which evolves into Charizard starting at level 36."
+}}
+{{pokemon-profile
+      image="http://cdn.bulbagarden.net/upload/thumb/3/39/007Squirtle.png/500px-007Squirtle.png"
+      name="Squirtle"
+      type="Water"
+      number="007"
+      profile="Squirtle (Japanese: ゼニガメ Zenigame) is a Water-type Pokémon. It evolves into Wartortle starting at level 16, which evolves into Blastoise starting at level 36."
+}}
 
-{{outlet}}
+
+{{#hide-show}}{{/hide-show}}
